# IAM-PLATFORM

./: Cargo.toml  README.md
.cargo/: config.toml
migrations/: 20260702131909_create_users_table.sql  20260702182941_create_organizations_table.sql  20260703055151_create_memberships_table.sql  20260703055821_create_roles_table.sql  20260703055916_create_permissions_table.sql  20260703055953_create_role_permissions_table.sql  20260703060020_create_member_roles_table.sql  20260703104216_create_refresh_tokens_table.sql  20260703152730_create_api_keys_table.sql  20260703155948_create_audit_logs_table.sql
src/: main.rs  swagger.rs
src/config/: database.rs  settings.rs
src/errors/: mod.rs
src/handlers/: api_key_handler.rs  auth_handler.rs  member_role_handler.rs  membership_handler.rs  mod.rs  organization_handler.rs  permission_handler.rs  role_handler.rs  role_permission_handler.rs  session_handler.rs  user_handler.rs
src/middleware/: auth.rs  rbac.rs
src/models/: api_key.rs  audit_log.rs  member_role.rs  membership.rs  mod.rs  organization.rs  permission.rs  refresh_token.rs  role.rs  role_permission.rs  session.rs  user.rs
src/repositories/: api_key_repository.rs  audit_log_repository.rs  member_role_repository.rs  membership_repository.rs  mod.rs  organization_repository.rs  permission_repository.rs  rbac_repository.rs  refresh_token_repository.rs  role_permission_repository.rs  role_repository.rs  session_repository.rs  user_repository.rs
src/routes/: api_key_routes.rs  auth_routes.rs  member_role_routes.rs  membership_routes.rs  mod.rs  role_routes.rs  (+5 more)
(+29 files in other folders)
