[package]
name = "iam-platform"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono"
] }

dotenvy = "0.15"

uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"

chrono = { version = "0.4", features = ["serde"] }

tower-http = { version = "0.6", features = ["trace"] }

tracing = "0.1"
tracing-subscriber = "0.3"
validator = { version = "0.20", features = ["derive"] }
argon2 = "0.5"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }